--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "me-api",
+  "name": "dynamic-profile-api",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
